--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Tech Team Challenge",
+  "short_name": "Kevin's Tech Team Application",
   "name": "Create React App Sample",
   "icons": [  ],
   "start_url": ".",
